syntax = "proto3";

package authenticate;

option go_package = "./go_pb";

message LoginRequest {
    string mnv = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    
}

message RegisterRequest {
    string mnv = 1;
}
message RegisterResponse {
    bool isSucesss = 1;
}

service AuthenticationService {
    rpc GetTokenDemo(LoginRequest) returns (LoginResponse){}
}
